--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <!-- <i class="fab fa-github"></i> -->
                         <i class="fas fa-light fa-file"></i>
                     </span>
-                    <span>Dataset - Coming Soon</span>
+                    <span>Dataset</span>
                     </a>
                 </span>
               </div>
