--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <span class="link-block">
-                    <a href="https://github.com/Liesy/SCM" target="_blank"
+                    <a href="https://github.com/ICTMCG/SCM" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code - Coming Soon</span>
+                    <span>Code</span>
                   </a>
                 </span>
                 <span class="link-block">
